<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CCF SG Connect</string>
    <string name="dgroups">DGroups</string>
    <string name="events">Events</string>
    <string name="forums">Forums</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact: </string>
    <string name="day">Day: </string>
    <string name="group">Group: </string>
    <string name="ministries">Ministries</string>
    <string name="videos">Videos</string>
    <string name="worship_service_rooms">Worship Service Rooms</string>
    <string name="loading">Loading</string>
    <string name="exit_message">Are you sure you want to exit the app?</string>
    <string name="one_year_bible">One Year Bible</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="join">Join</string>
    <string name="download">Download</string>
    <string name="member_price">Member Price:</string>
    <string name="guest_price">Guest Price:</string>
    <string name="date">Date:</string>
    <string name="resources">Resources</string>
    <string name="time">Time:</string>
    <string name="venue">Venue:</string>
    <string name="daily_bible">Daily Bible</string>
    <string name="matthew_28_19_text">Go therefore and make disciples of all nations, baptizing them in the name of the Father and of the Son and of the Holy Spirit.\n\nMatthew 28:19</string>
    <string name="gal_6_10_text">Therefore, as we have opportunity, let us do good to all people, especially to those who belong to the family of believers.\n\nGalatians 6:10</string>
	<string name="jos_1_8_text">Meditate on it day and night, so that you may be careful to do everything written in it.\n\nJoshua 1:8</string>
	<string name="peter_4_10_text">Each of you should use whatever gift you have received to serve others.\n\n1 Peter 4:10</string>
</resources>
