<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical">
	    
	    <ImageView
	        android:id="@+id/imageview_sg"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/header_sg_1"
	        android:scaleType="centerCrop" />
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	        <RelativeLayout
	            android:layout_weight="1"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content">
				<ImageView
			        android:id="@+id/imageview_bible"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:src="@drawable/home_bg_bible"
			        android:scaleType="centerCrop" />
				<com.ccfsg.connect.views.RobotoTextView
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:maxLines="1"
				    android:text="@string/daily_bible"
					app:typeface="roboto_light_italic"
				    android:textColor="@android:color/white"
				    android:shadowColor="@android:color/black"
				    android:shadowDx="1"
				    android:shadowDy="1"
				    android:shadowRadius="2"
				    android:background="@drawable/gradient_transparent_to_black"
				    android:gravity="bottom"
				    android:paddingTop="20dp"
				    android:layout_alignParentBottom="true"
				    android:paddingLeft="10dp"
				    android:textSize="30sp" />
				<com.ccfsg.connect.views.RobotoTextView
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/jos_1_8_text"
					app:typeface="roboto_light_italic"
				    android:textColor="@android:color/white"
				    android:background="@drawable/gradient_black_to_transparent"
				    android:gravity="right"
				    android:paddingLeft="10dp"
				    android:paddingRight="10dp"
				    android:paddingTop="5dp"
				    android:paddingBottom="40dp"
				    android:textSize="13sp" />
			</RelativeLayout>
			<RelativeLayout
	            android:layout_weight="1"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content">
				<ImageView
			        android:id="@+id/imageview_events"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:src="@drawable/home_bg_event"
			        android:scaleType="centerCrop" />
				<com.ccfsg.connect.views.RobotoTextView
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:maxLines="1"
				    android:text="@string/events"
					app:typeface="roboto_light_italic"
				    android:textColor="@android:color/white"
				    android:shadowColor="@android:color/black"
				    android:shadowDx="1"
				    android:shadowDy="1"
				    android:shadowRadius="2"
				    android:background="@drawable/gradient_transparent_to_black"
				    android:gravity="bottom"
				    android:paddingTop="20dp"
				    android:layout_alignParentBottom="true"
				    android:paddingLeft="10dp"
				    android:textSize="36sp" />
			</RelativeLayout>
	    </LinearLayout>
		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
			<ImageView
		        android:id="@+id/imageview_videos"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:src="@drawable/home_bg_video2"
		        android:scaleType="centerCrop" />
			<com.ccfsg.connect.views.RobotoTextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:maxLines="1"
			    android:text="@string/videos"
				app:typeface="roboto_light_italic"
			    android:textColor="@android:color/white"
			    android:shadowColor="@android:color/black"
			    android:shadowDx="1"
			    android:shadowDy="1"
			    android:shadowRadius="2"
			    android:background="@drawable/gradient_transparent_to_black"
			    android:gravity="bottom"
			    android:paddingTop="20dp"
			    android:layout_alignParentBottom="true"
			    android:paddingLeft="20dp"
			    android:textSize="36sp" />
			<com.ccfsg.connect.views.RobotoTextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/matthew_28_19_text"
				app:typeface="roboto_light_italic"
			    android:textColor="@android:color/white"
			    android:background="@drawable/gradient_black_to_transparent"
			    android:gravity="right"
			    android:paddingRight="10dp"
			    android:paddingTop="5dp"
			    android:textSize="13sp" />
		</RelativeLayout>
		<RelativeLayout
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content">
			<ImageView
		        android:id="@+id/imageview_forums"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:src="@drawable/home_bg_forums"
		        android:scaleType="centerCrop" />
			<com.ccfsg.connect.views.RobotoTextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:maxLines="1"
			    android:text="@string/forums"
				app:typeface="roboto_light_italic"
			    android:textColor="@android:color/white"
			    android:shadowColor="@android:color/black"
			    android:shadowDx="1"
			    android:shadowDy="1"
			    android:shadowRadius="2"
			    android:gravity="bottom|right"
			    android:paddingTop="20dp"
			    android:layout_alignParentBottom="true"
			    android:paddingRight="20dp"
			    android:textSize="36sp" />
			<com.ccfsg.connect.views.RobotoTextView
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/gal_6_10_text"
				app:typeface="roboto_light_italic"
			    android:textColor="@android:color/white"
			    android:background="@drawable/gradient_black_to_transparent"
			    android:paddingLeft="10dp"
			    android:paddingRight="10dp"
			    android:paddingTop="5dp"
			    android:textSize="13sp" />
		</RelativeLayout>
		<ImageView
	        android:id="@+id/imageview_dgroups"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:src="@drawable/header_dgroup"
	        android:scaleType="fitXY" />
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
	        <RelativeLayout
	            android:layout_weight="1"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content">
				<ImageView
			        android:id="@+id/imageview_ministry"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:src="@drawable/home_bg_serve"
			        android:scaleType="centerCrop" />
				<com.ccfsg.connect.views.RobotoTextView
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:maxLines="1"
				    android:text="@string/ministries"
					app:typeface="roboto_light_italic"
				    android:textColor="@android:color/white"
				    android:shadowColor="@android:color/black"
				    android:shadowDx="1"
				    android:shadowDy="1"
				    android:shadowRadius="2"
				    android:background="@drawable/gradient_transparent_to_black"
				    android:gravity="bottom"
				    android:paddingTop="20dp"
				    android:layout_alignParentBottom="true"
				    android:paddingLeft="10dp"
				    android:textSize="30sp" />
				<com.ccfsg.connect.views.RobotoTextView
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:text="@string/peter_4_10_text"
					app:typeface="roboto_light_italic"
				    android:textColor="@android:color/white"
				    android:background="@drawable/gradient_black_to_transparent"
				    android:gravity="right"
				    android:paddingLeft="10dp"
				    android:paddingRight="10dp"
				    android:paddingTop="5dp"
				    android:paddingBottom="20dp"
				    android:textSize="13sp" />
			</RelativeLayout>
			<RelativeLayout
	            android:layout_weight="1"
			    android:layout_width="0dp"
			    android:layout_height="wrap_content">
				<ImageView
			        android:id="@+id/imageview_resources"
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:src="@drawable/home_bg_resources"
			        android:scaleType="centerCrop" />
				<com.ccfsg.connect.views.RobotoTextView
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:maxLines="1"
				    android:text="@string/resources"
					app:typeface="roboto_light_italic"
				    android:textColor="@android:color/white"
				    android:shadowColor="@android:color/black"
				    android:shadowDx="1"
				    android:shadowDy="1"
				    android:shadowRadius="2"
				    android:background="@drawable/gradient_transparent_to_black"
				    android:gravity="bottom"
				    android:paddingTop="20dp"
				    android:layout_alignParentBottom="true"
				    android:paddingLeft="10dp"
				    android:textSize="30sp" />
			</RelativeLayout>
	    </LinearLayout>
	</LinearLayout>
</ScrollView>