<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

	<com.android.volley.toolbox.NetworkImageView
	    android:id="@+id/imageview_image"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:adjustViewBounds="true"
	    android:scaleType="fitXY"/>
    <ImageView
	    android:id="@+id/imageview_image_backup"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:adjustViewBounds="true"
	    android:visibility="gone"
	    android:scaleType="fitXY"/>
	<com.ccfsg.connect.views.RobotoTextView
        android:id="@+id/textview_title"
    	android:background="@drawable/gradient_black_to_transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    	android:paddingLeft="10dp"
        android:paddingRight="10dp"
		android:shadowColor="@android:color/black"
		android:shadowDx="1"
		android:shadowDy="1"
		android:shadowRadius="2"
        android:textColor="@color/white"
        app:typeface="roboto_regular"
        android:textSize="40sp" />
	
    <LinearLayout
		android:layout_alignParentBottom="true"
    	android:background="@drawable/gradient_transparent_to_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
	    android:orientation="vertical" >
        
        <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <com.ccfsg.connect.views.RobotoTextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="20"
	        	android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:textColor="@color/white"
	            app:typeface="roboto_regular"
	            android:text="@string/contact"
				android:shadowColor="@android:color/black"
				android:shadowDx="1"
				android:shadowDy="1"
				android:shadowRadius="2"
	            android:textSize="17sp" />
		    <com.ccfsg.connect.views.RobotoTextView
	            android:id="@+id/textview_contact"
	            android:layout_weight="80"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dp"
	            android:textColor="@color/white"
	            app:typeface="roboto_light"
				android:shadowColor="@android:color/black"
				android:shadowDx="1"
				android:shadowDy="1"
				android:shadowRadius="2"
	            android:textSize="17sp" />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <com.ccfsg.connect.views.RobotoTextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="20"
	        	android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:textColor="@color/white"
	            app:typeface="roboto_regular"
	            android:text="@string/day"
				android:shadowColor="@android:color/black"
				android:shadowDx="1"
				android:shadowDy="1"
				android:shadowRadius="2"
	            android:textSize="17sp" />
		    <com.ccfsg.connect.views.RobotoTextView
	            android:id="@+id/textview_day"
	            android:layout_weight="80"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dp"
	            android:textColor="@color/white"
	            app:typeface="roboto_light"
				android:shadowColor="@android:color/black"
				android:shadowDx="1"
				android:shadowDy="1"
				android:shadowRadius="2"
	            android:textSize="17sp" />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <com.ccfsg.connect.views.RobotoTextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="20"
	        	android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:textColor="@color/white"
	            app:typeface="roboto_regular"
	            android:text="@string/time"
				android:shadowColor="@android:color/black"
				android:shadowDx="1"
				android:shadowDy="1"
				android:shadowRadius="2"
	            android:textSize="17sp" />
		    <com.ccfsg.connect.views.RobotoTextView
	            android:id="@+id/textview_time"
	            android:layout_weight="80"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dp"
	            android:textColor="@color/white"
	            app:typeface="roboto_light"
				android:shadowColor="@android:color/black"
				android:shadowDx="1"
				android:shadowDy="1"
				android:shadowRadius="2"
	            android:textSize="17sp" />
	    </LinearLayout>
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal">
		    <com.ccfsg.connect.views.RobotoTextView
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="20"
	        	android:layout_marginLeft="10dp"
	            android:layout_marginRight="10dp"
	            android:textColor="@color/white"
	            app:typeface="roboto_regular"
	            android:text="@string/group"
	            android:shadowColor="@android:color/black"
				android:shadowDx="1"
				android:shadowDy="1"
				android:shadowRadius="2"
	            android:textSize="17sp" />
		    <com.ccfsg.connect.views.RobotoTextView
	            android:id="@+id/textview_group"
	            android:layout_weight="80"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dp"
	            android:textColor="@color/white"
	            app:typeface="roboto_light"
				android:shadowColor="@android:color/black"
				android:shadowDx="1"
				android:shadowDy="1"
				android:shadowRadius="2"
	            android:textSize="17sp" />
	    </LinearLayout>
    </LinearLayout>
</RelativeLayout>